feat: weather and final changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#212121" />
+    <meta name="description" content="FlashTabs | Chirag Modi"/>
+    <link rel="icon" type="image/svg" href="/favicon.svg" sizes="16x16">
+    <meta name="author" content="Chirag Modi">
+    <meta name="keywords" content="FlashTabs, Chirag modi, react, belugaui, video library, extension, newtab, chromeextension">
+    <meta name="description" content="FlashTabs, Beautifully simple start page by Chirag.">
+
+    <meta property="og:title" content="FlashTabs">
+    <meta name="og:description" content="Turn your potential into progress with a beautifully simple start page by FlashTabs.">
+    <meta property="og:image" content="/assets/favicon.svg">
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:type" content="image/svg" />
+    <meta property="og:url" content="https://flashtabs.vercel.app/">
+    <meta property="og:type" content="website" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,12 +29,11 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>FlashTabs | by chirag</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
