refactor: favicon file type changed to ico

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#212121" />
     <meta name="description" content="FlashTabs | Chirag Modi"/>
-    <link rel="icon" type="image/svg" href="/favicon.ico" sizes="16x16">
+    <link rel="icon" type="image/svg" href="/favicon.svg" sizes="16x16">
     <meta name="author" content="Chirag Modi">
     <meta name="keywords" content="FlashTabs, Chirag modi, react, belugaui, video library, extension, newtab, chromeextension">
     <meta name="description" content="FlashTabs, Beautifully simple start page by Chirag.">
 
     <meta property="og:title" content="FlashTabs">
     <meta name="og:description" content="Turn your potential into progress with a beautifully simple start page by FlashTabs.">
-    <meta property="og:image" content="/assets/favicon.ico">
+    <meta property="og:image" content="/assets/favicon.svg">
     <meta property="og:image:height" content="600" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:type" content="image/svg" />
